--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,33 +1,50 @@
 workflows:
-  my-workflow:
-    name: Workflow1
-    instance_type: mac_mini
-    max_build_duration: 60
+  ios-workflow:
+    name: ios_workflow
     environment:
       groups:
-        - group_name
+        - app_store_credentials # <-- (Includes APP_STORE_CONNECT_ISSUER_ID, APP_STORE_CONNECT_KEY_IDENTIFIER, APP_STORE_CONNECT_PRIVATE_KEY)
+        - certificate_credentials # <-- (Includes CERTIFICATE_PRIVATE_KEY)
+        - other
+       # Add the group environment variables in Codemagic UI (either in Application/Team variables) - https://docs.codemagic.io/variables/environment-variable-groups/
       vars:
-        PUBLIC_ENV_VAR: "value here"
-      flutter: stable
+        XCODE_WORKSPACE: "Calendar.xcodeproj"  # PUT YOUR WORKSPACE NAME HERE
+        XCODE_SCHEME: "Calender" # PUT THE NAME OF YOUR SCHEME HERE
       xcode: latest
-    cache:
-      cache_paths:
-        - ~/.pub-cache
+      cocoapods: default
     triggering:
       events:
         - push
       branch_patterns:
-        - pattern: '*'
+        - pattern: master
           include: true
           source: true
-      cancel_previous_builds: false
     scripts:
-      - ...
+      - name: Set up keychain to be used for code signing using Codemagic CLI 'keychain' command
+        script: |
+                    keychain initialize
+      - name: Fetch signing files
+        script: |
+                    app-store-connect fetch-signing-files $(xcode-project detect-bundle-id) --type IOS_APP_STORE --create
+      - name: Add certificates to keychain
+        script: |
+                    keychain add-certificates
+      - name: Increment build number
+        script: agvtool new-version -all $(($BUILD_NUMBER +1))
+      - name: Set up code signing settings on Xcode project
+        script: xcode-project use-profiles
+      - name: Build ipa for distribution
+        script: xcode-project build-ipa --workspace "$XCODE_WORKSPACE" --scheme "$XCODE_SCHEME"
     artifacts:
-      - build/**/outputs/bundle/**/*.aab
+      - build/ios/ipa/*.ipa
+      - /tmp/xcodebuild_logs/*.log
+      - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
     publishing:
-      email:
-        recipients:
-          - saranjith.pk@cred.club
-      scripts:
-        - echo 'Post-publish script'
+      app_store_connect:
+        api_key: $APP_STORE_CONNECT_PRIVATE_KEY      # Contents of the API key
+        key_id: $APP_STORE_CONNECT_KEY_IDENTIFIER    # Alphanumeric value that identifies the API key
+        issuer_id: $APP_STORE_CONNECT_ISSUER_ID      # Alphanumeric value that identifies who created the API key
+        submit_to_testflight: false        # Optional boolean, defaults to false. Whether or not to submit the uploaded build to TestFlight to automatically enroll your build to beta testers.
+      # beta_groups:                                  # Specify the names of beta tester groups that will get access to the build once it has passed beta review.
+      #     - group name 1
+      #     - group name 2
