comment tests code

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -59,14 +59,14 @@ workflows:
           XCODE_PROJECT: "Calendar.xcodeproj" # <-- Put the name of your project here.
           XCODE_SCHEME: "Calendar" # <-- Put the name of your scheme here.
     scripts:
-      - name: Run tests
-        script: |
-          xcodebuild \
-          -project "$XCODE_PROJECT" \
-          -scheme "$XCODE_SCHEME" \
-          -sdk iphonesimulator \
-          -destination 'platform=iOS Simulator,name=iPhone 12,OS=14.1' \
-          clean build test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+#      - name: Run tests
+#        script: |
+#          xcodebuild \
+#          -project "$XCODE_PROJECT" \
+#          -scheme "$XCODE_SCHEME" \
+#          -sdk iphonesimulator \
+#          -destination 'platform=iOS Simulator,name=iPhone 12,OS=14.1' \
+#          clean build test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
       - name: Build debug app
         script: |
           xcodebuild build -project "$XCODE_PROJECT" \
