--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -11,7 +11,7 @@ workflows:
             # See the following link for more details - https://docs.codemagic.io/code-signing-yaml/signing-ios/
             # https://appstoreconnect.apple.com/access/api
         vars:
-          XCODE_WORKSPACE: "Calendar.xcodeproj" # <-- Put the name of your workspace here.
+          XCODE_WORKSPACE: "Calendar.xcworkspace" # <-- Put the name of your workspace here.
           XCODE_SCHEME: "Calendar" # <-- Put the name of your scheme here.
 #          APP_STORE_APP_ID: 1555555551 # <-- Put the app id number here. This is found in App Store Connect > App > General > App Information
           BUNDLE_ID: com.dreamplug.cred.codemagic.test
